test/sema/implicit-immutable-value-to-mutable-pointer-conversion.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

def main(i: int) {
    // CHECK: [[@LINE+1]]:27: error: cannot initialize variable of type 'mutable int*' with 'int'
    var p: mutable int* = i;
}
